kubernetes-policy-enforcer/constraints/disallow_root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRunAsNonRoot
metadata:
  name: disallow-root-user
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
